Failure detecting click events with modifiers held #86116

Closed
opened 2021-03-01 03:53:38 +01:00 by Campbell Barton · 4 comments

System Information

Blender Version
Broken: all versions (tested 2.83)
Worked: none

Short description of error

Holding modifiers prevents click events from being registered for heavy scenes.

Exact steps for others to reproduce the error

With this file loaded with factory settings:
slow_event.blend

  • Play animation.
  • Adjust metaball resolution so playback is slow (5-10fps for e.g.).
  • Hold Ctrl then click on center of the camera, release Ctrl (do this quickly).
  • Try do this multiple times.

The Camera often won't be selected.


Reporting for reference.

**System Information** **Blender Version** Broken: all versions (tested 2.83) Worked: none **Short description of error** Holding modifiers prevents click events from being registered for heavy scenes. **Exact steps for others to reproduce the error** With this file loaded with factory settings: [slow_event.blend](https://archive.blender.org/developer/F9854725/slow_event.blend) - Play animation. - Adjust metaball resolution so playback is slow (5-10fps for e.g.). - Hold Ctrl then click on center of the camera, release Ctrl *(do this quickly)*. - Try do this multiple times. The Camera often won't be selected. ---- *Reporting for reference.*
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by d8b35219d1

This issue was referenced by d8b35219d1e71ba4c3e16ec4a9b057aaf65e9f37

This issue was referenced by bfc70a6a95

This issue was referenced by bfc70a6a958b9c35bde765ea8a02e8b1fd36db8b
Author
Owner

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2021-03-01 08:30:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86116
No description provided.